--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h1>Digitally crafted</h1>
             <h2>brand experiences</h2>
             <video autoplay muted loop
-                src="https://rr5---sn-a5msen7z.googlevideo.com/videoplayback?expire=1706792899&ei=Y0O7ZYnFE6uki9oPsYaLwAo&ip=45.112.174.153&id=o-ABNKxB_HISwc6SM0jm-v8wsKy0seGRb-X2md6InsSg9s&itag=137&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&pcm2=no&vprv=1&svpuc=1&mime=video%2Fmp4&gir=yes&clen=6130719&dur=26.999&lmt=1685896213331048&keepalive=yes&fexp=24007246,24350018&beids=24350018&c=ANDROID&txp=6219224&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cpcm2%2Cvprv%2Csvpuc%2Cmime%2Cgir%2Cclen%2Cdur%2Clmt&sig=AJfQdSswRQIhAK_OkJ4yJvVPrRutmQ83HxtNxyCu-xANzYR_eQWttZ4XAiBe6dmEyw-v7moZqEi3CYwk9HxX6YJXEfpbr5kMgIFJNA%3D%3D&redirect_counter=1&cm2rm=sn-i3bdk7l&req_id=ed7793edaa96a3ee&cms_redirect=yes&cmsv=e&mh=vM&mip=2401:4900:1c88:7e9b:4cd9:fcc3:9926:9e06&mm=34&mn=sn-a5msen7z&ms=ltu&mt=1706770516&mv=u&mvi=5&pl=49&lsparams=mh,mip,mm,mn,ms,mv,mvi,pl&lsig=AAO5W4owRgIhAOQYp4RIF98_tPz74QXHfhWlBmQHBSV4DxyI86s6_j1xAiEAx4Hjy38pPq4vLh1YUh-6NDBvqdVXt9UV3djcahUoDEg%3D"></video>
+                src="./video/video.mp4"></video>
         </div>
         <div class="page2">
             <h1>We are Duo Studio,</h1>
